Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/5061359/T5061359a.out
T5061359a.java:16:30: compiler.err.override.incompatible.ret: (compiler.misc.cant.implement: m1(), Base, m1(), Intf), int, void
1 error
